[gd_scene load_steps=2 format=3 uid="uid://cvr7dp01tagun"]

[ext_resource type="Script" path="res://main.gd" id="1_6te8g"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6te8g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LoginLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Login
"
horizontal_alignment = 1

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Connect Game Center"

[node name="HSeparatorAchievement" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AchievementLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Achievements"
horizontal_alignment = 1

[node name="AchievementListButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "List Achievements"

[node name="AchievementProgressButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Complete Achievements"

[node name="AchievementLoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load Achievements"

[node name="AchievementResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Reset Achievements"

[node name="AchievementShowButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Show achievements"

[node name="HSeparatorLeaderboard" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LeaderboardLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Achievements"
horizontal_alignment = 1

[node name="LeaderboardSubmitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Submit score"

[node name="LeaderboardShowButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Show leaderboard"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AchievementListButton" to="." method="_on_achievement_list_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AchievementProgressButton" to="." method="_on_achievement_progress_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AchievementLoadButton" to="." method="_on_achievement_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AchievementResetButton" to="." method="_on_achievement_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AchievementShowButton" to="." method="_on_achievement_show_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaderboardSubmitButton" to="." method="_on_leaderboard_submit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaderboardShowButton" to="." method="_on_leaderboard_show_button_pressed"]
